Closed Bug 473441 Opened 16 years ago Closed 15 years ago

acbdecode script generates Nanojit assertion

Categories

(Tamarin Graveyard :: Baseline JIT (CodegenLIR), defect, P2)

x86
macOS
defect

Tracking

(Not tracked)

VERIFIED FIXED
flash10.1

People

(Reporter: edwsmith, Assigned: edwsmith)

References

Details

Attachments

(1 file)

build release-debugger
cd esc/build
./abcdecode.sh

Assertion failed: "((a->isCond() && b->isop(LIR_2)))" ("/Users/edwsmith/vm/redux/codegen/CodegenLIR.cpp":819)
(In reply to comment #0)
> build release-debugger

er, debug-debugger.. release builds have no assertions
I've also seen this in some SWF content on the web, but not in any simple test cases.
Blocks: 469836
Assignee: nobody → edwsmith
Status: NEW → ASSIGNED
Priority: -- → P2
Target Milestone: --- → flash10.x
Since we know that ExprFilter will simplify LIR_cmov(const,a,b) to just a or b, we should let this pass through.
Attachment #361324 - Flags: review?(jodyer)
patch is based on old code, blocked on bug 461316 to rebase
Depends on: 461316
Attachment #361324 - Flags: review?(jodyer) → review+
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Resolved fixed engineering / work item that has been pushed.  Setting status to verified.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: