Loosen VerifyWriter to allow cmov(const,a,b) to pass through (bug 473441 r=jodyer+)

The result will be a or b, if we just let it get past the validator.